<resources>
    <string name="app_name">GithubBrowser</string>

    <!-- common -->
    <string name="divider_dot"> \u2022 </string>
    <string name="symbol_star"> \u2605 </string>
    <string name="developing_progress">Developing..</string>

    <!--content descriptions-->
    <string name="toolbar_background_image_description">ToolbarBackgroundImageDescription</string>
    <string name="avatar_content_description">avatar image</string>
    <string name="comments_content_description">comments icon</string>
    <string name="icon_content_description">icon</string>

    <!--menu-->
    <string name="menu_star_title">Star</string>
    <string name="menu_branches_title">Branches</string>

    <string name="title_activity_repo_detail">Repo detail activity</string>

    <string name="sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- user detail -->
    <string name="tab_info_title">Info</string>
    <string name="tab_activity_title">Activity</string>
    <string name="tab_starred_title">Starred</string>
    <string name="user_detail_organizations_text">Organizations</string>

    <!-- repo detail -->
    <string name="tab_repo_info_title">Info</string>
    <string name="tab_repo_files_title">Files</string>
    <string name="tab_repo_commits_title">Commits</string>
    <string name="tab_repo_activity_title">Activity</string>
    <string name="repo_detail_watchers_text">Watchers</string>
    <string name="repo_detail_forks_text">Forks</string>
    <string name="repo_detail_stargazers_text">Stargazers</string>
    <string name="repo_detail_issues_text">Issues</string>
    <string name="repo_detail_readme_text">Readme</string>

    <!--drawer menu-->
    <string name="drawer_news">News</string>
    <string name="drawer_repos">Repositories</string>
    <string name="drawer_gists">Gists</string>
    <string name="drawer_followers">Followers</string>
    <string name="drawer_following">Following</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <!--repo-->
    <string name="my_repos_title">My repos</string>
    <!--followers-->
    <string name="my_followers_title">My followers</string>
    <!--following-->
    <string name="my_following_title">My following</string>

    <!-- placeholders -->
    <string name="joined_at_placeholder">Joined at: %1$s</string>
    <string name="followers_placeholder">Followers / %1$s</string>
    <string name="following_placeholder">Following / %1$s</string>
    <string name="repos_placeholder">Repos / %1$s</string>
    <string name="size_placeholder">Size: %1$s</string>
    <string name="language_placeholder">Language: %1$s</string>
    <string name="created_at_placeholder">Created at %1$s</string>
    <string name="latest_commit_placeholder">Latest commit %1$s</string>
    <string name="additions_commit_placeholder">[+%1$d]</string>
    <string name="deletions_commit_placeholder">[-%1$d]</string>
    <string name="committed_at_placeholder">Committed at %1$s</string>
    <string name="commit_placeholder">Commit %1$s</string>

    <string name="star_count_placeholder"> \u2605 %1$d</string>
    <string name="fork_count_placeholder"> \u2442 %1$d</string>

    <!--error view-->
    <string name="error_view_tap_to_retry">Tap to retry</string>

</resources>
