<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.havriiash.dmitriy.githubbrowser.utils.ExtensionsKt" />

        <import type="android.text.TextUtils" />

        <variable
            name="repo"
            type="com.havriiash.dmitriy.githubbrowser.data.remote.entity.Repo" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_repo_detail_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_repo_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@{repo.full_name}"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="Repository Name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@{String.format(@string/latest_commit_placeholder, (repo == null) ? ` ` : ExtensionsKt.relativeTimeStr(repo.pushed_at))}"
                            android:textSize="12sp"
                            tools:text="Latest commit" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/fragment_repo_detail_issues"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(repo.open_issues)}"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/repo_detail_issues_text"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/fragment_repo_detail_stargazers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(repo.stargazers_count)}"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/repo_detail_stargazers_text"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/fragment_repo_detail_forks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(repo.forks)}"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/repo_detail_forks_text"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/fragment_repo_detail_watchers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(repo.watchers_count)}"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/repo_detail_watchers_text"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_repo_detail_readme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/repo_detail_readme_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <com.havriiash.dmitriy.githubbrowser.main.ui.views.ErrorView
                android:id="@+id/fragment_repo_detail_errorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:errorText="Some error"
                app:retryBtn="true" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>